<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_corner_radius"
    android:layout_margin="@dimen/default_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin">

        <TextView
            android:id="@+id/dish_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:text="@string/dish_name_default" />

        <ImageView
            android:id="@+id/dish_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="@dimen/dish_image_max_width"
            android:adjustViewBounds="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dish_name"
            android:layout_above="@+id/dish_description"
            android:contentDescription="@string/dish_image_description"
            android:layout_marginRight="@dimen/default_margin"
            app:srcCompat="@drawable/dish_thumb01"
            android:layout_marginEnd="@dimen/default_margin" />

        <LinearLayout
            android:id="@+id/dish_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dish_name"
            android:layout_toRightOf="@+id/dish_image"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/dish_image">

            <TextView
                android:id="@+id/dish_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/dish_price_default"
                android:layout_marginBottom="@dimen/tiny_margin"/>

            <TextView
                android:id="@+id/dish_origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/dish_origin_default"
                android:layout_marginBottom="@dimen/tiny_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Alérgenos:"
                android:layout_marginBottom="@dimen/tiny_margin"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/dish_allergen01"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/allergen_image_description"
                    app:srcCompat="@drawable/allergen01"
                    android:layout_marginRight="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/default_margin" />

                <ImageView
                    android:id="@+id/dish_allergen02"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/allergen_image_description"
                    app:srcCompat="@drawable/allergen05"
                    android:layout_marginRight="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/default_margin" />

                <ImageView
                    android:id="@+id/dish_allergen03"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/allergen_image_description"
                    app:srcCompat="@drawable/allergen03"
                    android:layout_marginRight="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/default_margin" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/dish_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dish_information"
            android:layout_marginTop="@dimen/small_margin"
            tools:text="@string/dish_description_default" />

    </RelativeLayout>
</android.support.v7.widget.CardView>
