<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_corner_radius"
    android:layout_margin="@dimen/default_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin">

        <TextView
            android:id="@+id/order_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/default_margin"
            tools:text="@string/dish_name_default" />

        <ImageView
            android:id="@+id/order_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="@dimen/dish_image_max_width"
            android:adjustViewBounds="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/order_name"
            android:contentDescription="@string/dish_image_description"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            app:srcCompat="@drawable/dish01"
            android:layout_marginEnd="@dimen/default_margin" />

        <LinearLayout
            android:id="@+id/order_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tiny_margin"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/small_font_size"
                android:textStyle="bold"
                tools:text="@string/dish_price_default" />

            <TextView
                android:id="@+id/order_origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tiny_margin"
                android:textSize="@dimen/small_font_size"
                android:textStyle="bold"
                tools:text="@string/dish_origin_default" />

            <TextView
                android:id="@+id/order_allergens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_font_size"
                android:layout_marginBottom="@dimen/tiny_margin"
                android:textStyle="bold"
                tools:text="@string/allergens_title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/order_allergen01"
                    android:layout_width="@dimen/card_allergen_size"
                    android:layout_height="@dimen/card_allergen_size"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/allergen_image_description"
                    app:srcCompat="@drawable/allergen01"
                    android:layout_marginRight="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/small_margin" />

                <ImageView
                    android:id="@+id/order_allergen02"
                    android:layout_width="@dimen/card_allergen_size"
                    android:layout_height="@dimen/card_allergen_size"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/allergen_image_description"
                    app:srcCompat="@drawable/allergen05"
                    android:layout_marginRight="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/small_margin" />

                <ImageView
                    android:id="@+id/order_allergen03"
                    android:layout_width="@dimen/card_allergen_size"
                    android:layout_height="@dimen/card_allergen_size"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/allergen_image_description"
                    app:srcCompat="@drawable/allergen03"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/order_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_information"
            android:layout_marginTop="@dimen/default_margin"/>

        <TextView
            android:id="@+id/client_comments_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_description"
            android:text="Comentarios:"
            android:layout_marginTop="@dimen/default_margin"/>

        <EditText
            android:id="@+id/client_comments_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dish_detail_comments_height"
            android:layout_below="@id/client_comments_label"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/small_font_size"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_marginTop="@dimen/small_margin"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>
